[package]
name = "bpi-rs"
version = "0.1.2"
edition = "2024"
authors = ["YUELI <yuelioi1210@gmail.com>"]
description = "Bilibili API client library for Rust"
license = "MIT"
repository = "https://github.com/Yuelioi/bpi-rs"
homepage = "https://github.com/Yuelioi/bpi-rs"
documentation = "https://docs.rs/bpi-rs"
readme = "README.md"
keywords = ["bilibili", "api", "client", "rust", "http"]
categories = ["api-bindings", "web-programming", "network-programming"]
publish = true
exclude = [".vscode", "assets"]
[features]
default = ["full"]
full = [
  "activity",
  "article",
  "audio",
  "bangumi",
  "cheese",
  "clientinfo",
  "comment",
  "creativecenter",
  "dynamic",
  "danmaku",
  "electric",
  "fav",
  "historytoview",
  "live",
  "login",
  "manga",
  "message",
  "misc",
  "note",
  "opus",
  "search",
  "user",
  "video",
  "video_ranking",
  "vip",
  "wallet",
  "web_widget",
]
activity = []
article = []
audio = []
bangumi = []
cheese = []
clientinfo = []
comment = []
creativecenter = ["dep:base64"]
dynamic = ["reqwest/multipart"]
danmaku = ["dep:quick-xml", "dep:flate2"]
electric = []
fav = []
historytoview = []
live = ["dep:base64"]
login = []
manga = []
message = ["dep:uuid"]
misc = ["dep:hmac", "dep:sha2", "dep:hex"]
note = []
opus = []
search = []
user = []
video = []
video_ranking = []
vip = []
wallet = []
web_widget = []

[dependencies]
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "chrono",
  "local-time",
  "fmt",
  "ansi",
  "std",
] }
reqwest = { version = "0.12", features = [
  "json",
  "cookies",
  "gzip",
  "deflate",
  "brotli",
  "stream",
  "multipart",
] }
serde_json = "1"
thiserror = "2.0"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "sync"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
bytes = { version = "1.8" }

md5 = { version = "0.8" } # wbi

base64 = { version = "0.22", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
flate2 = { version = "1.1", optional = true }
quick-xml = { version = "0.38", features = ["serialize"], optional = true }
bitflags = { version = "2.9" }
uuid = { version = "1.18", features = ["v4"], optional = true }

tokio-util = "0.7"
serde_with = "3.14"


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
